@@ -9,11 +9,10 @@ lib/CGI/Mungo/Response.pm
 lib/CGI/Mungo/Response/Base.pm
 lib/CGI/Mungo/Response/Raw.pm
 lib/CGI/Mungo/Response/SimpleTemplate.pm
+lib/CGI/Mungo/Response/TemplateToolkit.pm
 lib/CGI/Mungo/Session.pm
 lib/CGI/Mungo/Utils.pm
-Makefile.PL
 MANIFEST			This list of files
-META.yml
 README
 root/templates/genericerror.html
 script/example_cgi_apps/hello_world.cgi
@@ -22,3 +21,6 @@ script/simple_cgi_server.pl
 t/00_use.t
 t/01_mungo.t
 t/02_response_raw.t
+t/03_pod.t
+Makefile.PL
+META.yml
