@@ -1,13 +1,15 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.31012
+# Note: this file was auto-generated by Module::Build::Compat version 0.2808_01
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
+          'PL_FILES' => {},
           'INSTALLDIRS' => 'site',
           'NAME' => 'CGI::Mungo',
           'EXE_FILES' => [],
           'VERSION_FROM' => 'lib/CGI/Mungo.pm',
           'PREREQ_PM' => {
                            'Data::Dumper' => '',
+                           'Template' => '',
                            'HTTP::Status' => '',
                            'CGI' => '',
                            'Carp' => '',
