@@ -1,3 +1,13 @@
+Mungo 1.4 -- 26/06/2011
+
+	Added more documentation
+	
+	Improved example script
+	
+	Add template toolkit response plugin
+	
+	Fixed cookie domain bug
+
 Mungo 1.3 -- 18/04/2009
 
 	Added more pod
